build: first build

--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
-APP_NAME="Semicolon Malaysia"
+APP_NAME="OPT Anniversary"
 APP_PORT=8080
 APP_URL=""
 APP_HOST="0.0.0.0"
-APP_META_DESCRIPTION="Looking for custom solutions for your ever-growing business? We provide various IT services that will cater to your smallest business needs."
+APP_META_DESCRIPTION="OPT Anniversary"
 
 THEME_LOADING="#DEF6FE"
 THEME_PRIMARY="#194DA3"
@@ -13,5 +13,4 @@ THEME_WARNING="#FFD151"
 THEME_ERROR="#B22222"
 THEME_SUCCESS="#74A57F"
 
-EMAILJS_SERVICE_ID="service_hna6xp6"
-EMAILJS_TEMPLATE_ID="template_e8nb9uj"
+GOOGLE_ANALYTICS_ID=""
