--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,16 +16,14 @@ steps:
     - 'THEME_WARNING=${_THEME_WARNING}'
     - 'THEME_ERROR=${_THEME_ERROR}'
     - 'THEME_SUCCESS=${_THEME_SUCCESS}'
-    - 'EMAILJS_SERVICE_ID=${_EMAILJS_SERVICE_ID}'
-    - 'EMAILJS_TEMPLATE_ID=${_EMAILJS_TEMPLATE_ID}'
     - 'GOOGLE_ANALYTICS_ID=${_GOOGLE_ANALYTICS_ID}'
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/web-semicolon/server', '.']
+  args: ['build', '-t', 'gcr.io/opt-ticket/server', '.']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/web-semicolon/server']
+  args: ['push', 'gcr.io/opt-ticket/server']
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['run', 'deploy', 'web-semicolon', '--image', 'gcr.io/web-semicolon/server', '--region', 'asia-southeast1', '--platform','managed']
+  args: ['run', 'deploy', 'opt-ticket', '--image', 'gcr.io/opt-ticket/server', '--region', 'asia-southeast1', '--platform','managed']
 options:
   logging: CLOUD_LOGGING_ONLY
-images: ['gcr.io/web-semicolon/server']
+images: ['gcr.io/opt-ticket/server']
 timeout: 1200s
